tooling/nargo_cli/tests/snapshots/execution_failure/regression_8233/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to subtract with overflow
   ┌─ src/main.nr:14:66
   │
14 │             if (if (!false) { 1061432097 } else { (b >> 41) } < (506440519 - 3531841762)) {
   │                                                                  ---------------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
   │
   = Call stack:
     1: main
             at src/main.nr:3:29
     2: func_3
             at src/main.nr:14:66

Aborting due to 1 previous error
